--- a/ESTILOS/estilo.css
+++ b/ESTILOS/estilo.css
@@ -37,6 +37,8 @@ html body {
     color: #e86b8a;
     font-weight: bold;
     transition: 0.2s;
+    font-family: "Emilys Candy", serif;
+    font-size: 18px;
 }
 
 .navlinks li a:hover{
@@ -61,10 +63,6 @@ html body {
     height: auto;
     border-top: 2px solid #000000;
     border-bottom: 2px solid #000000;
-}
-
-.ordenText {
-    text-align: center;
 }
 
 .ordenText a {
@@ -95,12 +93,14 @@ body h1{
 
 .info-left{
     flex: 1.3;
-    color: #474646;
+    vertical-align: middle;
     font-size: 17px;
 }
 
 .info-left p {
+  margin-top: 10px;
   font-family: "Emilys Candy", serif;
+  vertical-align: middle;
 }
 
 .info-right{
@@ -123,11 +123,17 @@ body h1{
     height: 20px;
 }
 
+.MenuHeader{
+  text-align: center;
+  padding-top: 10px;
+  font-family: "Henny Penny", system-ui;
+}
+
 .gridProductos{
-    width: 70%;
+    width: 80%;
     margin: 50px auto;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(5,1fr);
     gap: 20px;
 }
 
@@ -182,6 +188,7 @@ body h1{
     justify-content: center;
     gap: 6px;
     min-width: 120px;
+    width: 30%;
     height: 40px;
     vertical-align: middle;
 }
@@ -267,12 +274,6 @@ body h1{
 .footerInfo3 li:hover{
     color: #d67b92;
     transition: 0.3s;
-}
-
-.gridProductos,
-.footerInfoSection,
-.info {
-  width: min(90%, 1200px);
 }
 
 header {
@@ -448,6 +449,7 @@ header {
     gap: 20px;
     text-align: center;
     width: 100%;
+    padding-bottom: 15px;
   }
 
   .footerInfo2, .footerInfo3 {
@@ -459,19 +461,19 @@ header {
   }
 
   .footerInfo1 img {
-    max-width: 100px;
-    width: 30%;
+    width: 100%;
+    min-width: 140px;
     height: auto;
   }
 
   .footerInfo2 h2,
   .footerInfo3 h2 {
-    font-size: 13px;
-    margin-bottom: -15px;
+    font-size: 16px;
+    margin-bottom: -30px;
   }
 
   .footerInfo2 li,
   .footerInfo3 li {
-    font-size: 10px;
+    font-size: 13px;
   }
 }
