--- a/ESTILOS/estiloPostres.css
+++ b/ESTILOS/estiloPostres.css
@@ -62,7 +62,8 @@ html body {
     width: 100%;
     height: auto;
     border-top: 0px solid #000000;
-    border-bottom: 2px solid #000000;
+    border-bottom: 0px solid #000000;
+    margin-bottom: -4px;
 }
 
 .banner-bottom img {
