--- a/ESTILOS/estiloSalados.css
+++ b/ESTILOS/estiloSalados.css
@@ -63,6 +63,7 @@ html body {
     height: auto;
     border-top: 0px solid #000000;
     border-bottom: 2px solid #000000;
+    margin-bottom: -4px;
 }
 
 .banner-bottom img {
