--- a/ESTILOS/estilo.css
+++ b/ESTILOS/estilo.css
@@ -86,7 +86,7 @@ html body {
 
 body h1{
     text-align: center;
-    font-family: "Henny Penny", system-ui;;
+    font-family: "Henny Penny", system-ui;
 }
 
 .info{
@@ -175,11 +175,13 @@ body h1{
 .precio {
     font-size: 18px;
     font-weight: bold;
+    color: #000;
 }
 
 .precio_promocion{
     font-size: 20px;
     font-weight: bold;
+    color: #000;
 }
 
 .producto img {
@@ -528,10 +530,10 @@ header {
   }
 
   .footerInfo3 svg {
-  width: 20px;
-  height: 20px;
-  margin-right: 8px;
-}
+    width: 20px;
+    height: 20px;
+    margin-right: 8px;
+  }
 
   .MenuHeader{
     text-align: center;
