--- a/ESTILOS/estilo.css
+++ b/ESTILOS/estilo.css
@@ -158,20 +158,6 @@ body h1{
     transition: 0.3;
 }
 
-.productoNombre {
-    color: #e86b8a;
-    font-weight: bold;
-    font-size: 20px;
-    font-family: "Henny Penny", system-ui;
-}
-
-.productoNombreSalado {
-    color: #9fc753;
-    font-weight: bold;
-    font-size: 20px;
-    font-family: "Henny Penny", system-ui;
-}
-
 .precio {
     font-size: 18px;
     font-weight: bold;
@@ -187,6 +173,18 @@ body h1{
 .producto img {
     width: 90%;
     border-radius: 8px;
+}
+
+.producto a{
+  display: inline-block;
+}
+
+/*Menu POSTRES*/
+.productoNombre {
+    color: #e86b8a;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: "Henny Penny", system-ui;
 }
 
 .producto button{
@@ -209,14 +207,31 @@ body h1{
     vertical-align: middle;
 }
 
-.producto a{
-  display: inline-block;
-}
-
 .producto button:hover{
     background-color: #974f61;
     transform: scale(1.1);
     transition: 0.3s;
+}
+
+#cherryDivProducto{
+  vertical-align: middle;
+  padding: 25px 0 0 0;
+  text-align: center;
+  background-color: #FEE6FC;
+  border: 0px solid #000;
+}
+
+#cherryImgProducto{
+  width: 100%;
+  vertical-align: middle;
+}
+
+/*Menu SALADOS*/
+.productoNombreSalado {
+    color: #9fc753;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: "Henny Penny", system-ui;
 }
 
 .producto #buttonSalado{
@@ -245,19 +260,6 @@ body h1{
     transition: 0.3s;
 }
 
-#cherryDivProducto{
-  vertical-align: middle;
-  padding: 25px 0 0 0;
-  text-align: center;
-  background-color: #FEE6FC;
-  border: 0px solid #000;
-}
-
-#cherryImgProducto{
-  width: 100%;
-  vertical-align: middle;
-}
-
 #oliverDivProducto{
   vertical-align: middle;
   padding: 25px 0 0 0;
@@ -267,6 +269,53 @@ body h1{
 }
 
 #oliverImgProducto{
+  width: 100%;
+  vertical-align: middle;
+}
+
+/*Menu EXTRAS*/
+.productoNombreExtras {
+    color: #f77f7f;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: "Henny Penny", system-ui;
+}
+
+.producto #buttonExtras{
+    background-color: #f77f7f;
+    color: #FFF;
+    font-size: 15px;
+    padding: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: "Emilys Candy", serif;;
+    transition: 0.3s;
+    margin-bottom: 5px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    min-width: 120px;
+    width: 30%;
+    height: 40px;
+    vertical-align: middle;
+}
+
+.producto #buttonExtras:hover{
+    background-color: #dd4444;
+    transform: scale(1.1);
+    transition: 0.3s;
+}
+
+#salsasPersonajeDivProducto{
+  vertical-align: middle;
+  padding: 25px 0 0 0;
+  text-align: center;
+  background-color: #f09d9d;
+  border: 0px solid #000;
+}
+
+#salsasPersonajeImgProducto{
   width: 100%;
   vertical-align: middle;
 }
@@ -390,6 +439,9 @@ header {
 
 .sliderBtn.left2 { left: 10px; background-color: #9fc753;}
 .sliderBtn.right2 { right: 10px; background-color: #9fc753;}
+
+.sliderBtn.left3 { left: 10px; background-color: #f28888;}
+.sliderBtn.right3 { right: 10px; background-color: #f28888;}
 
 .sliderProductos, 
 .sliderProductos * {
